backend/dev.log

> backend@1.0.0 dev
> nodemon index.js

[33m[nodemon] 3.1.14[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: js,mjs,cjs,json[39m
[32m[nodemon] starting `node index.js`[39m
file:///C:/Users/Amalv/OneDrive/Desktop/AI-Powered%20Document%20Orchestrator/backend/index.js:5
import pdfParse from 'pdf-parse';
       ^^^^^^^^
SyntaxError: The requested module 'pdf-parse' does not provide an export named 'default'
    at #asyncInstantiate (node:internal/modules/esm/module_job:319:21)
    at process.processTicksAndRejections (node:internal/process/task_queues:104:5)
    at async ModuleJob.run (node:internal/modules/esm/module_job:422:5)
    at async node:internal/modules/esm/loader:639:26
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v25.8.1
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node index.js`[39m
Server is running on http://localhost:5000
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node index.js`[39m
Server is running on http://localhost:5000
Could not connect to MongoDB: Error: querySrv ECONNREFUSED _mongodb._tcp.cluster.mongodb.net
    at QueryReqWrap.onresolve [as oncomplete] (node:internal/dns/promises:293:17) {
  errno: undefined,
  code: 'ECONNREFUSED',
  syscall: 'querySrv',
  hostname: '_mongodb._tcp.cluster.mongodb.net'
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting child process[39m
[32m[nodemon] starting `node index.js`[39m
Server is running on http://localhost:5000
Could not connect to MongoDB: Error: querySrv ECONNREFUSED _mongodb._tcp.cluster.mongodb.net
    at QueryReqWrap.onresolve [as oncomplete] (node:internal/dns/promises:293:17) {
  errno: undefined,
  code: 'ECONNREFUSED',
  syscall: 'querySrv',
  hostname: '_mongodb._tcp.cluster.mongodb.net'
}
^C^C